--- a/blog/tags.yml
+++ b/blog/tags.yml
@@ -1,6 +1,6 @@
 facebook:
-  label: Facebook
-  permalink: /facebook
+  label: Github
+  permalink: /GitHub
   description: Facebook tag description
 
 hello:
@@ -9,8 +9,8 @@ hello:
   description: Hello tag description
 
 docusaurus:
-  label: Docusaurus
-  permalink: /docusaurus
+  label: Salesforce
+  permalink: /Salesforce
   description: Docusaurus tag description
 
 hola:
