--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
 		"write-heading-ids": "docusaurus write-heading-ids"
 	},
 	"dependencies": {
-		"@docusaurus/core": "3.7.0",
-		"@docusaurus/preset-classic": "3.7.0",
-		"@docusaurus/theme-mermaid": "^3.7.0",
+		"@docusaurus/core": "^3.8.0",
+		"@docusaurus/preset-classic": "^3.8.0",
+		"@docusaurus/theme-mermaid": "^3.8.0",
 		"@easyops-cn/docusaurus-search-local": "^0.49.2",
 		"@fortawesome/fontawesome-svg-core": "^6.7.2",
 		"@fortawesome/free-brands-svg-icons": "^6.7.2",
@@ -33,8 +33,8 @@
 		"remark-math": "^6.0.0"
 	},
 	"devDependencies": {
-		"@docusaurus/module-type-aliases": "3.7.0",
-		"@docusaurus/types": "3.7.0"
+		"@docusaurus/module-type-aliases": "3.8.0",
+		"@docusaurus/types": "^3.8.0"
 	},
 	"browserslist": {
 		"production": [
