--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
 	},
 	"dependencies": {
 		"@docusaurus/core": "^3.8.0",
+		"@docusaurus/plugin-google-gtag": "^3.8.0",
+		"@docusaurus/plugin-sitemap": "^3.8.0",
 		"@docusaurus/preset-classic": "^3.8.0",
 		"@docusaurus/theme-mermaid": "^3.8.0",
 		"@easyops-cn/docusaurus-search-local": "^0.49.2",
