--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"dependencies": {
 		"@docusaurus/core": "^3.8.0",
 		"@docusaurus/plugin-google-gtag": "^3.8.0",
+		"@docusaurus/plugin-google-tag-manager": "^3.8.0",
 		"@docusaurus/plugin-sitemap": "^3.8.0",
 		"@docusaurus/preset-classic": "^3.8.0",
 		"@docusaurus/theme-mermaid": "^3.8.0",
